# render-engine

./: .gitmodules  CMakeLists.txt  imgui copy.ini  imgui.ini
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
include/: App.h  Camera.h  Config.h  EBO.h  FrameBuffer.h  IndexBuffer.h  Input.h  Material.h  Mesh.h  Renderer.h  Scene.h  Shader.h  Texture.h  VAO.h  VBO.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Viewport.h  Window.h  triangle_mesh.h
shaders/: default.frag  default.vert  frameBuffer.frag  frameBuffer.vert
shaders/tests/TestCamera/: default.frag  default.vert
src/: App.cc  App.cpp  Camera.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Input.cpp  Material.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cc  main.cpp  triangle_mesh.cpp
src/tests/: Test.cpp  Test.h
src/tests/TestCamera/: TestCamera.cpp  TestCamera.h  frag.glsl  vert.glsl
src/tests/TestClearColor/: TestClearColor.cpp  TestClearColor.h
src/tests/TestTexture2D/: TestTexture2D.cpp  TestTexture2D.h
